# Dagger

./: .clang-format  .gitignore  CMakeLists.txt  DevMode.sh  Doxygen  README.md  automake.sh
Dagger/: DObjFactory.hpp  DThreadPool.hpp
dagger/: DCircularBuffer.hpp  DObjFactory.hpp  DThreadPool.hpp  Dagger.hpp
dagger/net/: DCommunicator.hpp  DDispatcher.hpp  DHttpProtocol.hpp  DMsg.hpp  DMsgHandler.hpp  DNet.hpp  DNetConnection.hpp  DNetService.hpp  DProtocol.hpp  DService.hpp  DSocket.hpp
dagger/system/: DSocket.hpp  DSystem.hpp
dagger/utility/: DObjFactory.hpp  DStream.hpp  DThreadPool.hpp  DUtility.hpp
docs/: SUMMARY.md
net/: DCommunicator.cpp  DMsg.cpp  DNetService.cpp
src/: DCircularBuffer_testing.cpp  dagger_testing.cpp  main_testing.cpp
utility/: DFileUtil.cpp  DFileUtil.hpp  DThreadPool.hpp
